--- a/DocuMind.ipynb
+++ b/DocuMind.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "91106e31",
    "metadata": {
     "id": "91106e31",
@@ -112,9 +112,9 @@
     "\n",
     "# keys for the services we will use\n",
     "\n",
-    "os.environ[\"GENAI_API_KEY\"] = \"AIzaSyCUOmoUaa8D1lNxo3pfAoq57iSje_5QogI\"\n",
-    "os.environ[\"GROQ_API_KEY\"] = \"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\"\n",
-    "os.environ[\"LANGCHAIN_API_KEY\"] = \"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\"\n",
+    "os.environ[\"GENAI_API_KEY\"] = \"key\"\n",
+    "os.environ[\"GROQ_API_KEY\"] = \"key\"\n",
+    "os.environ[\"LANGCHAIN_API_KEY\"] = \"key\"\n",
     "os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\""
    ]
   },
